--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "my",
+  "name": "new-gulp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp",
+    "svgSprite": "gulp svgSprites"
   },
-  "author": "",
+  "author": "liza-golubeva",
   "license": "ISC",
-  "browserslist": [
-    "> 1%",
-    "not dead"
-  ],
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
-    "browser-sync": "^2.27.5",
-    "core-js": "^3.18.3",
+    "browser-sync": "^2.27.7",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
-    "gulp-cli": "^2.3.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-fonter": "^0.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.0.0",
-    "sass": "^1.42.1",
-    "webpack": "^5.58.2",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-ttf2woff2": "^4.0.1",
+    "gulp-version-number": "^0.2.4",
+    "sass": "^1.49.7",
+    "webpack": "^5.68.0",
     "webpack-stream": "^7.0.0"
-  },
-  "dependencies": {
-    "gulp-htmlmin": "^5.0.1"
   }
 }
